Adicionado o link do CSS nas páginas

--- a/loucademia/WebContent/relatoriosDeEntradaSaida.html
+++ b/loucademia/WebContent/relatoriosDeEntradaSaida.html
@@ -2,8 +2,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="UTF-8"/>
 		<title>Loucademia</title>
+		<link rel="stylesheet" type="text/css" href="css/Loucademia_Estilo.css"/>
 	</head>
 	<body>
 		<header>
@@ -41,9 +42,7 @@
 			<br/>
 			<input type="submit" value="Gerar relatório"/>
 		</form>
-		
-		<br/>
-		
+
 		<table>
 			<tr>
 				<th>ID</th>
