--- a/loucademia/WebContent/controleDeAcesso.html
+++ b/loucademia/WebContent/controleDeAcesso.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Loucademia</title>
+		<link rel="stylesheet" type="text/css" href="css/Loucademia_Estilo.css"/>
 	</head>
 	<body>
 		<header>
@@ -19,6 +20,26 @@
 			</nav>
 		</header>
 		<!-- Cabeçalho - Fim -->
+		
+		<h1>Controle de Acesso</h1>
+	
+		<div id="infoMessage">
+			(Aqui vai uma eventual mensagem do sistema, confirmando sucesso ou erro)
+		</div>
+		
+		<br/>
+		
+		<form>
+			<fieldset>
+				<legend>Parâmetros de Acesso</legend>
+				<label for="id">ID:</label><br/>
+				<input type="text" name="id" id="id"/><br/>
+				<label for="rg">RG:</label><br/>
+				<input type="text" name="rg" id="rg"/><br/>					
+			</fieldset>
+			<br/>
+			<input type="submit" value="Registrar acesso"/>
+		</form>		
 		
 	<!-- Rodapé - Início -->
 	</body>
