--- a/loucademia/WebContent/novoAluno.html
+++ b/loucademia/WebContent/novoAluno.html
@@ -12,7 +12,7 @@
 			<nav>
 				<div>
 					<a href="novoAluno.html">Novo aluno</a><br/> 
-					<a href="pesquisaDeAluno.html">Pesquisa de aluno</a><br/>
+					<a href="pesquisaDeAluno.xhtml">Pesquisa de aluno</a><br/>
 					<a href="controleDeAcesso.html">Controle de acesso</a><br/>
 					<a href="relatoriosDeEntradaSaida.html">Relatórios de Entradas e Saídas</a><br/>
 					<a href="relatoriosDeSituacoes.html">Relatórios	de Situações</a><br/>
