Criado o relatório de situações

--- a/loucademia/WebContent/novoAluno.html
+++ b/loucademia/WebContent/novoAluno.html
@@ -15,7 +15,7 @@
 					<a href="pesquisaDeAluno.xhtml">Pesquisa de aluno</a><br/>
 					<a href="controleDeAcesso.html">Controle de acesso</a><br/>
 					<a href="relatoriosDeEntradaSaida.html">Relatórios de Entradas e Saídas</a><br/>
-					<a href="relatoriosDeSituacoes.html">Relatórios	de Situações</a><br/>
+					<a href="relatoriosDeSituacoes.xhtml">Relatórios	de Situações</a><br/>
 				</div>
 			</nav>
 		</header>
