Finalizado a lógica da pesquisa de alunos

--- a/loucademia/WebContent/pesquisaDeAluno.xhtml
+++ b/loucademia/WebContent/pesquisaDeAluno.xhtml
@@ -27,13 +27,13 @@
 			<form jsf:id="form">
 				<fieldset>
 					<legend>Parâmetros da Pesquisa</legend>
-					<label for="id">Matrícula:</label><br/>
+					<label for="id">Matrícula</label><br/>
 					<input type="text" jsf:value="#{pesquisaAlunoBean.matricula}" id="id"/><br/>
-					<label for="nome">Nome:</label><br/>
+					<label for="nome">Nome</label><br/>
 					<input type="text" jsf:value="#{pesquisaAlunoBean.nome}" id="nome"/><br/>
-					<label for="rg">RG:</label><br/>
+					<label for="rg">RG</label><br/>
 					<input type="text" jsf:value="#{pesquisaAlunoBean.rg}" id="rg"/><br/>
-					<label for="telefoneDDD">Telefone:</label><br/>
+					<label for="telefoneDDD">Telefone</label><br/>
 					<input type="tel" jsf:value="#{pesquisaAlunoBean.telefone}" id="telefoneNumero"/>					
 				</fieldset>
 				<br/>
