Migrado o arquivo controleDeAcesso para XHTML

--- a/loucademia/WebContent/controleDeAcesso.xhtml
+++ b/loucademia/WebContent/controleDeAcesso.xhtml
@@ -27,9 +27,9 @@
 			<form jsf:id="form">
 				<fieldset>
 					<legend>Parâmetros de Acesso</legend>
-					<label for="id">Matrícula:</label><br/>
+					<label for="id">Matrícula</label><br/>
 					<input type="text" jsf:value="#{controleAcessoBean.matricula}" id="id"/><br/>
-					<label for="rg">RG:</label><br/>
+					<label for="rg">RG</label><br/>
 					<input type="text" jsf:value="#{controleAcessoBean.rg}" id="rg"/><br/>					
 				</fieldset>
 				<br/>
