--- a/loucademia/WebContent/dadosAluno.xhtml
+++ b/loucademia/WebContent/dadosAluno.xhtml
@@ -127,7 +127,9 @@
 				<br/>
 				
 				<input type="submit" value="Gravar" jsf:action="#{alunoBean.gravar}"/>&#160;
-				<input type="button" value="Relatório de Entradas e Saídas" jsf:outcome="relatoriosDeEntradaSaida?matricula=#{alunoBean.aluno.matricula}"/>
+				<input type="button" value="Relatório de Entradas e Saídas" 
+					jsf:outcome="relatoriosDeEntradaSaida?matricula=#{alunoBean.aluno.matricula}"
+					jsf:rendered="#{alunoBean.matricula != null}"/>
 				
 			</form>
 		</ui:define>
