--- a/loucademia/WebContent/relatoriosDeSituacoes.xhtml
+++ b/loucademia/WebContent/relatoriosDeSituacoes.xhtml
@@ -8,11 +8,10 @@
 	lang="pt-br">
 	
 	<ui:composition template="Layout.xhtml">
-		<f:metadata>
-			<f:viewParam name="matricula" value="#{alunoBean.matricula}"></f:viewParam>
-			<f:viewAction action="#{alunoBean.carregar}"></f:viewAction>
-		</f:metadata>
 		<ui:define name="conteudo">
+			<f:metadata>
+				<f:viewAction action="#{relatorioSituacoesBean.check}"></f:viewAction>
+			</f:metadata>
 		
 		<h1>Relatório de Situações</h1>
 	
