Melhorado o arquivo de template de layout

--- a/loucademia/WebContent/controleDeAcesso.xhtml
+++ b/loucademia/WebContent/controleDeAcesso.xhtml
@@ -8,22 +8,8 @@
 	lang="pt-br">
 	
 	<ui:composition template="Layout.xhtml">
-		<f:metadata>
-			<f:viewParam name="matricula" value="#{alunoBean.matricula}"></f:viewParam>
-			<f:viewAction action="#{alunoBean.carregar}"></f:viewAction>
-		</f:metadata>
+		<ui:param name="title" value="Controle de Acesso"/>
 		<ui:define name="conteudo">
-		
-		<h1>Controle de Acesso</h1>
-	
-			<h:panelGroup rendered="#{!facesContext.messageList.isEmpty()}">
-				<div id="infoMessage">
-					<h:messages/>
-				</div>
-			</h:panelGroup>
-			
-			<br/>
-			
 			<form jsf:id="form">
 				<fieldset>
 					<legend>Parâmetros de Acesso</legend>
