--- a/loucademia/WebContent/layout.xhtml
+++ b/loucademia/WebContent/layout.xhtml
@@ -25,6 +25,15 @@
 				</div>
 			</nav>
 		</header>
+		<h1>#{title}</h1>
+		
+		<h:panelGroup rendered="#{!facesContext.messageList.isEmpty()}">
+			<div id="infoMessage">
+				<h:messages/>
+			</div>
+		</h:panelGroup>
+	
+		<br/>
 		<!-- Cabeçalho - Fim -->
 		<ui:insert name="conteudo"></ui:insert>
 	</body>
