--- a/loucademia/WebContent/dadosAluno.xhtml
+++ b/loucademia/WebContent/dadosAluno.xhtml
@@ -8,21 +8,12 @@
 	lang="pt-br">
 	
 	<ui:composition template="Layout.xhtml">
+		<ui:param name="title" value="#{alunoBean.titulo}"/>
 		<f:metadata>
 			<f:viewParam name="matricula" value="#{alunoBean.matricula}"></f:viewParam>
 			<f:viewAction action="#{alunoBean.carregar}"></f:viewAction>
 		</f:metadata>
-		<ui:define name="conteudo">
-			<h1>#{alunoBean.titulo}</h1>
-			
-			<h:panelGroup rendered="#{!facesContext.messageList.isEmpty()}">
-				<div id="infoMessage">
-					<h:messages/>
-				</div>
-			</h:panelGroup>
-			
-			<br/>
-		
+		<ui:define name="conteudo">		
 			<form jsf:id="form">
 				<input type="hidden" jsf:value="#{alunoBean.aluno.matricula}"/>
 				<fieldset>
