--- a/loucademia/WebContent/relatoriosDeEntradaSaida.xhtml
+++ b/loucademia/WebContent/relatoriosDeEntradaSaida.xhtml
@@ -8,22 +8,12 @@
 	lang="pt-br">
 	
 	<ui:composition template="Layout.xhtml">
+		<ui:param name="title" value="Relatórios de Entradas e Saídas"/>
 		<ui:define name="conteudo">
 			<f:metadata>
 				<f:viewParam name="matricula" value="#{relatorioEntradaSaidaBean.matricula}"></f:viewParam>
 				<f:viewAction action="#{relatorioEntradaSaidaBean.carregarAluno}"></f:viewAction>
 			</f:metadata>
-		
-		<h1>Relatório de Entradas e Saídas</h1>
-	
-			<h:panelGroup rendered="#{!facesContext.messageList.isEmpty()}">
-				<div id="infoMessage">
-					<h:messages/>
-				</div>
-			</h:panelGroup>
-		
-			<br/>		
-
 			<form jsf:id="form">
 				<fieldset>
 					<legend>Parâmetros de Entradas e Saídas</legend>
