--- a/loucademia/WebContent/controleDeAcesso.xhtml
+++ b/loucademia/WebContent/controleDeAcesso.xhtml
@@ -14,9 +14,9 @@
 				<fieldset>
 					<legend>Parâmetros de Acesso</legend>
 					<label for="id">Matrícula</label><br/>
-					<input type="text" jsf:value="#{controleAcessoBean.matricula}" id="id"/><br/>
+					<input type="text" jsf:value="#{controleAcessoBean.matricula}" id="id" jsf:label="Matrícula"/><br/>
 					<label for="rg">RG</label><br/>
-					<input type="text" jsf:value="#{controleAcessoBean.rg}" id="rg"/><br/>					
+					<input type="text" jsf:value="#{controleAcessoBean.rg}" id="rg" jsf:label="RG"/><br/>					
 				</fieldset>
 				<br/>
 				<input type="submit" value="Registrar acesso" jsf:action="#{controleAcessoBean.registrarAcesso}"/>
