--- a/loucademia/WebContent/pesquisaDeAluno.xhtml
+++ b/loucademia/WebContent/pesquisaDeAluno.xhtml
@@ -17,13 +17,13 @@
 				<fieldset>
 					<legend>Parâmetros da Pesquisa</legend>
 					<label for="id">Matrícula</label><br/>
-					<input type="text" jsf:value="#{pesquisaAlunoBean.matricula}" id="id"/><br/>
+					<input type="text" jsf:value="#{pesquisaAlunoBean.matricula}" id="id" jsf:label="Matrícula"/><br/>
 					<label for="nome">Nome</label><br/>
-					<input type="text" jsf:value="#{pesquisaAlunoBean.nome}" id="nome"/><br/>
+					<input type="text" jsf:value="#{pesquisaAlunoBean.nome}" id="nome" jsf:label="Nome"/><br/>
 					<label for="rg">RG</label><br/>
-					<input type="text" jsf:value="#{pesquisaAlunoBean.rg}" id="rg"/><br/>
+					<input type="text" jsf:value="#{pesquisaAlunoBean.rg}" id="rg" jsf:label="RG"/><br/>
 					<label for="telefoneDDD">Telefone</label><br/>
-					<input type="tel" jsf:value="#{pesquisaAlunoBean.telefone}" id="telefoneNumero"/>					
+					<input type="tel" jsf:value="#{pesquisaAlunoBean.telefone}" id="telefoneNumero" jsf:label="Telefone"/>					
 				</fieldset>
 				<br/>
 				<input type="submit" value="Pesquisar" jsf:action="#{pesquisaAlunoBean.pesquisar}"/>
